Trying fuzzy search using flexsearch (Failed)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.2",
-    "astro": "^2.1.7"
+    "astro": "^2.1.7",
+    "flexsearch": "^0.7.31"
   }
 }
