Update packages, fix spelling mistakes
Mainly astro from 2.1.5 to 2.5.0
For spelling mistakes, used: https://marketplace.visualstudio.com/items?itemName=streetsidesoftware.code-spell-checker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,12 @@
 {
+    "cSpell.words": [
+        "Astro",
+        "Brite",
+        "Flaticon",
+        "HTMLLI",
+        "HTMLU",
+        "Nanyang",
+        "onhold",
+        "qrcode"
+    ]
 }
