--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.2.0",
     "@astrojs/mdx": "^0.18.2",
-    "astro": "^3.0.3"
+    "astro": "^3.0.3",
+    "typescript": "^5.2.2"
   }
 }
