--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.2.0",
     "@astrojs/mdx": "^1.0.0",
     "astro": "^3.0.3",
+    "astro-icon": "^0.8.1",
     "typescript": "^5.2.2"
   }
 }
